# modern-data-architecture-accelerator

./: .bandit  .baseline-coverage-ignore  .cdxgenrc  .checkov.yml  .gitallowed  .gitignore  .gitlab-ci.yml  .gitleaksignore  .pages  .semgrepignore  .viperlightignore  ARCHITECTURES.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  CUSTOMIZATION.md  DATASETS.md  DEPLOYMENT.md  DEVELOPMENT.md  NOTICE.txt  NPM_PUBLISHING.md  PREDEPLOYMENT.md  PYTHON_TESTING.md  README.md  SECURITY.md  TESTING.md  THIRD-PARTY-NOTICE.md  aws-codeguru-reviewer.yml  buildspec.yml  eslint.config.js  eslint.config.mjs  jest.config.js  jest.config.snapshot.js  jest.setup.js  lerna.json  mdaaConstants.json  mkdocs.yml  nx.json  package-lock.json  package.json  (+5 more)
.gitlab/: merge_request_template.md
.pipeline/: Dockerfile  README.md
deployment/: build-open-source-dist.sh  build-s3-dist.sh  solution_config
docs/: CAEF-LakeFormation.drawio  CAEF.drawio  MDAA-LakeFormation.drawio  MDAA.drawio  sagemaker.drawio
installer/: .npmignore  README.md  (+6 more)
sample_configs/agentic_app/bedrock-agentcore-runtime/agent_core_code/: Dockerfile  agent.py  pyproject.toml
scripts/review/python-tests/: conftest.py  pyproject.toml  test_architecture_review.py  test_baseline_review.py  test_compliance_review.py  test_diff_parser.py  test_doc_quality_review.py  test_gitlab_threads.py  test_kiro_integration.py  test_module_quality_review.py  test_mr_summary.py  test_nx_graph.py  test_post_baseline_threads.py  test_report.py  test_test_standards_review.py  test_thread_lifecycle.py
tools/change-risk-assessor/: README.md  pyproject.toml
tools/change-risk-assessor/src/change_risk_assessor/: assessment.py  baseline.py  cli.py  config.py  diff.py  git.py  gitlab.py  pipeline.py  report.py  s3.py  scoring.py
tools/change-risk-assessor/tests/: conftest.py  test_assessment.py  test_baseline.py  test_config.py  test_diff.py  test_git.py  test_gitlab.py  test_report.py  test_s3.py  test_scoring.py
(+511 files in other folders)
