[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "change-risk-assessor"
version = "0.1.0"
description = "CI/CD infrastructure change risk assessment for MDAA"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "boto3>=1.34",
    "click>=8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto[s3]>=5.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
assess-risk = "change_risk_assessor.cli:assess_risk"
generate-baselines = "change_risk_assessor.cli:generate_baselines"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
