[project]
name = "agent-core-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-opentelemetry-distro>=0.10.0",
    "bedrock-agentcore<=0.1.5",
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "strands-agents>=1.19.0",
    "strands-agents-tools>=0.2.19",
    "uvicorn[standard]>=0.38.0",
]
